2009-07-27  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp: Always round down when doing layout
	rounding.  
	
	* uielement.cpp (OnPropertyChanged): Invalidate layout on
	rounding changes.

	Fixes ... a lot.
	
2009-07-27  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.cpp (EventObject::DoEmit): we emit the XAML
	handler *after* all registered handlers.  part of the fix for drt
	234.

	* window-gtk.cpp (MoonWindowGtk::button_press): ignore
	double-click and triple click gdk events here.  part of the fix
	for drt 234.

2009-07-27  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: Hydrate needs to accept Value* instead of a DOB.  It
	is legal to hydrate a top level managed non DOB class.
	* cbinding.cpp|h: regen

2009-07-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mp3.cpp: When seeking and we don't have enough data to seek to
	the desired pts, try again a bit later. Fixes MS DRT #59.

2009-07-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp: Use Makefile integration.

2009-07-27  Alan McGovern  <amcgovern@novell.com>

	* uielement.cpp: Default styles are applied even if the user
	  applies a style. Fixes some visual glitches in the controls
	  toolkit site.

2009-07-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: Use Application::GetResource instead of creating
	downloaders to get data.

2009-07-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: ReportErrorOccurred: don't propagate more than one
	error.

2009-07-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* application.cpp: GetResource: set the notify_size callback
	on the downloader too. Media must known the size whenever possible.

2009-07-27  Larry Ewing  <lewing@novell.com>

	* uielement.cpp (GetTransformToUIElementWithError): signal and
	error in the to_element doesn't have a Surface case.

2009-07-26  Larry Ewing  <lewing@novell.com>

	* rect.h: make PointInside inclusive on the top/left.

2009-07-24  Larry Ewing  <lewing@novell.com>
