@@ -1,5 +1,9 @@
 2009-07-27  Larry Ewing  <lewing@novell.com>
 
+	* glyphs.cpp, glyphs.h: Start implmenting glyph layout.  Fixes DRT #442.
+
+2009-07-27  Larry Ewing  <lewing@novell.com>
+
 	* frameworkelement.cpp: Always round down when doing layout
 	rounding.  
 	
